<resources>
    <string name="app_name">UHFTool</string>
    <string name="msg_scan">Scan</string>
    <string name="msg_access_label">Inventory</string>
    <string name="msg_app_settings">Settings</string>
    <string name="msg_hard_settings">Parameter</string>
    <string name="msg_readwrite">ReadWrite</string>
    <string name="msg_ver">V:</string>
    <string name="msg_exit">Exit</string>
    <string name="msg_hiden">Hide</string>
    <string name="msg_update">Update</string>
    <string name="msg_data_setting">Data settings</string>
    <string name="msg_normal_settings">General settings</string>
    <string name="msg_playsound">Sound</string>
    <string name="msg_vibrate">Vibration</string>
    <string name="msg_bootstart">Booted start</string>
    <string name="msg_continue_seek">Inventory</string>
    <string name="msg_interval">Interval</string>
    <string name="msg_prefix">Prefix</string>
    <string name="msg_suffix">Suffix</string>
    <string name="msg_end_char">End Char</string>
    <string name="msg_sendmode">Send Mode</string>
    <string name="msg_sendFocus">Focus</string>
    <string name="msg_sendBroad">Broadcast</string>
    <string name="msg_sendEmu">EmuKey</string>
    <string name="msg_sendClip">Clipboard</string>
    <string name="msg_other">Other</string>
    <string name="msg_developer">Developer</string>
    <string name="msg_broad_name">Broadcast name</string>
    <string name="msg_broad_key">Key name</string>
    <string name="msg_power">Power</string>
    <string name="msg_get">Get</string>
    <string name="msg_set">Set</string>
    <string name="msg_tmp">Temp</string>
    <string name="msg_region">Region</string>
    <string name="msg_data_area">Data area</string>
    <string name="msg_data_start">Data start</string>
    <string name="msg_data_len">Data length</string>
    <string name="msg_epc">EPC</string>
    <string name="msg_tid">TID</string>
    <string name="msg_enter">ENTER</string>
    <string name="msg_tab">TAB</string>
    <string name="msg_space">SPACE</string>
    <string name="msg_none">NONE</string>
    <string name="msg_revise">Modify</string>
    <string name="msg_save">Save</string>
    <string name="msg_ms">ms</string>
    <string name="msg_number">Number</string>
    <string name="msg_cancle">Cancle</string>
    <string name="msg_end_emu">End Char with keys</string>
    <string name="msg_dbm">dBm</string>
	<string name="msg_du">℃</string>
	<string name="msg_seek_single">Once</string>
	<string name="msg_stop">Stop</string>
	<string-array name="msg_bank_choose">
	    <item>PASSWORD</item>
	    <item>EPC</item>
	    <item>TID</item>
	    <item>USER</item>
	</string-array>
    <string name="msg_target_epc">EPC cannot be empty</string>
	<string name="msg_interval_char">Interval Char</string>
	<string name="msg_handsup_stop">Handsup stop</string>
	<string name="msg_scan_key">Search key</string>
	<string name="msg_custom_broadcast">Customized broadcast</string>
	<string name="msg_broadcast_name">Broadcast name</string>
	<string name="msg_data_key">Data Key value</string>
	<string name="msg_start_seek_broadcaast">Start seek broadcaast</string>
	<string name="msg_stop_seek_broadcaast">Stop seek broadcaast</string>
	<string name="msg_def_add_enter">Add Enter with broadcast mode</string>
	<string name="msg_go_default">Restore default</string>
	<string name="msg_seek_mode">Seek mode</string>
	<string name="msg_once">Once</string>
	<string name="msg_continue">Continue</string>
    <string name="msg_sequence">S/N</string>
	<string name="msg_epc_id">TagEPC</string>
	<string name="msg_nums">Nums</string>
	<string name="msg_rssi">RSSI</string>
	<string name="msg_bank">Bank</string>
	<string name="msg_address">Address(byte):</string>
	<string name="msg_lengh">Lenth(byte):</string>
    <string name="msg_ac_psw">AccessPassword:</string>
    <string name="msg_kill_psw">KillPassword:</string>
	<string name="msg_read_card">Read</string>
	<string name="msg_write_card">Write</string>
	<string name="msg_clear">Clear</string>
	<string name="msg_user">USER</string>
	<string name="msg_reserved">PASSWORD</string>
	<string name="msg_lock">Lock</string>
	<string name="msg_unclock">Unclock</string>
    <string name="msg_block_write">BlockWrite</string>
    <string name="msg_block_erase">BlockErase</string>
	<string name="msg_kill">Kill</string>
	<string name="msg_tid_notsurpport">TIDTID card temporarily not supported</string>
    <string name="msg_write_success">Write card success</string>
	<string name="msg_read_success">Read card success</string>
    <string name="msg_blockwrite_success">BlockWrite card success</string>
    <string name="msg_blockerase_success">BlockErase card success</string>
    <string name="msg_write_fail">Write failed, possible password error</string>
    <string name="msg_read_fail">Read failed, possible password error or read length out of range</string>
    <string name="msg_blockwrite_fail">BlockWrite failed, possibly password error</string>
    <string name="msg_blockerase_fail">BlockErase failed, possibly password error</string>
    <string name="msg_lenth">Length cannot be zero</string>
    <string name="msg_lock_success">Lock card success</string>
    <string name="msg_lock_fail">Lock failed, possible password error</string>
    <string name="msg_unlock_success">Unlock card success</string>
    <string name="msg_unlock_fail">Unlock failed, possible password error</string>
	<string name="msg_kill_success">Kill success</string>
    <string name="msg_kill_fail">Kill failed</string>
	<string name="msg_developer_psw">Developer password</string>
    <string name="msg_factory_psw">Factory password</string>
	<string name="msg_confirm">Confirm</string>
	<string name="msg_cancel">Cancel</string>
	<string name="msg_psw_error">Password error</string>
	<string name="msg_keyset_error">Scanner key setting error, please reset!</string>
	<string name="msg_key_select">Please press the key you select</string>
	<string name="msg_total"> Total:</string>
    <string name="offset">offset</string>
    <string name="restore_default_values">Restore default values</string>
    <string name="advance_option">Advance option</string>
    <string name="parameter">parameter</string>
    <string name="profile">Profile:</string>
    <string name="p0">P0</string>
    <string name="p1">P1</string>
    <string name="p2">P2</string>
    <string name="p3">P3</string>
    <string name="session">Session:</string>
    <string name="s0">S0</string>
    <string name="s1">S1</string>
    <string name="s2">S2</string>
    <string name="s3">S3</string>
    <string name="target">Target:</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="set">Set</string>
    <string name="tag">Tag</string>
    <string name="fastid">FastID</string>
    <string name="tagfocus">TagFocus</string>
    <string name="toggletarget">ToggleTarget</string>
    <string name="slow">Slow</string>
    <string name="quick_mode">Quick mode</string>
    <string name="dynamic">Dynamic</string>
    <string name="maxq">MaxQ:</string>
    <string name="minq">MinQ:</string>
    <string name="startq">StartQ:</string>
    <string name="thresholdmultiplier">Thresholdmultiplier:</string>
    <string name="retrycount">RetryCount:</string>
    <string name="clear_when_start_inventory">Clear when start Inventory</string>
    <string name="hide_pc">Hide PC</string>
    <string name="clear_epclist">Clear EPClist</string>
    <string name="clear">Clear</string>
    <string name="dynamic_values_set_success">Dynamic values set success</string>
    <string name="value_cannot_empty">value can not empty</string>
    <string name="parameter_configuration_file_selection">Parameter configuration file selection</string>
    <string name="target_label_state_A_B">Target label state A-B</string>
    <string name="speed_of_finding_the_card">Setting the speed of finding the card</string>
    <string name="Whether_to_turn_over">Whether to turn overA-B</string>
    <string name="inventory_fastid">Inventory returns EPC and TID at the same time</string>
    <string name="read_different_tags_quickly">Is it open to read different tags quickly</string>
    <string name="hide_pc_num">Whether or not to hide the PC number</string>
    <string name="clean_code_when_start">Do you want to empty the previous tag data when you start to search for cards continuously?</string>
    <string name="q_info">StartQ：start Q value\tminQ~maxQ MaxQ：maxQ value\t0~15 MinQ：min Q value\t0~15</string>
    <string name="Multiplier_threshold">Multiplier threshold, range (0~255)</string>
    <string name="power_write_fail">Power write fail</string>
    <string name="power_write_success">power write success</string>
    <string name="parameterisnot_correct">Parameter is not correct, please confirm!</string>
    <string name="selection_of_inventory_mode">Selection of inventory mode</string>
    <string name="when_simplification_algorithm_fails">After simplification algorithm fails, the number of simplification is again (range 0~255).</string>
    <string name="single">Single Tag Pattern</string>
    <string name="multiple">Multiple Tags Pattern</string>
    <string name="customize">Customize</string>
    <string name="zero">0</string>
    <string name="four">4</string>
    <string name="fifteen">15</string>
    <string name="downloading">Downloading</string>
    <string name="downloading_now">Downloading now</string>
    <string name="download_failed">Download failed</string>
    <string name="download_success">Download success</string>
    <string name="installing">Installing</string>
    <string name="network_not_available">Network is not available</string>
    <string name="time">Time:</string>
    <string name="mode_description">1~100 labels are recommended to use single mode,
		More than 100 labels are recommended for multi-mode</string>
	<string name="service_start">UHF service started</string>
    <string name="fixed_freq">FixedFreq</string>
    <string name="MHz">MHz</string>
    <string name="KHz">KHz</string>
    <string name="set_success">Set success</string>
    <string name="set_fail">Set fail</string>
    <string name="get_fail">Get success</string>
    <string name="pass">Pass</string>
    <string name="fail">Fail</string>
    <string name="notest">No Test</string>
    <string name="factory_test">Factory Test</string>
    <string name="single_label_distance">Single label distance</string>
    <string name="factory_33inv">33dBm Inventory(8m)</string>
    <string name="factory_33inv_1">33dBm Inventory(6m)</string>
    <string name="factory_30inv">30dBm Inventory(6m)</string>
    <string name="factory_30inv2m">30dBm Inventory(2m)</string>
    <string name="factory_25inv">25dBm Inventory(50cm)</string>
    <string name="factory_33w">33dBm Write(3m)</string>
    <string name="factory_30w">30dBm Write(1m)</string>
    <string name="factory_30w50cm">30dBm Write(50cm)</string>
    <string name="factory_27w">27dBm Write(1m)</string>
    <string name="factory_25w">25dBm Write(20cm)</string>
    <string name="update">Update</string>
    <string name="filter">Filter</string>
    <string name="filter_data">FilterData:</string>
    <string name="filter_bank">FilterBank:</string>
    <string name="filter_match">Match</string>
    <string name="filter_mismatch">Mismatch</string>
    <string name="tag_num">TagNums:</string>
    <string name="tag_total">TotalNums:</string>
    <string name="add_data">Additional data</string>
    <string name="special_filter">Special</string>
    <string name="epc">selected EPC:</string>
    <string name="choose_power">function:</string>
    <string name="choose_factory">model:</string>
    <string name="select_text_temperature">Temperature:</string>
    <string name="tem_get_tem">Get</string>
    <string name="select_unit_tem">℃</string>
    <string name="working_time">working time:</string>
    <string name="speed">Speed:</string>
    <string name="speed_unit">T/s</string>
</resources>