<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RadioGroup
            android:id="@+id/rg_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/sp_invmode"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:entries="@array/invmode" />

            <CheckBox
                android:id="@+id/cb_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/seek_font"
                android:text="@string/filter" />

            <CheckBox
                android:id="@+id/cn_special"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/seek_font"
                android:text="@string/special_filter" />

            <Button
                android:id="@+id/btn_clear_epc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textSize="@dimen/font_middle_14"/>

        </RadioGroup>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_invtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_invtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/working_time" />

        <EditText
            android:id="@+id/et_invtime"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:textSize="14sp"
            android:text="10"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="s" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ordinary_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/rl_filter1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:textSize="@dimen/font_middle_14">

        <TextView
            android:layout_weight="1.5"
            android:id="@+id/tv_filter_offset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/msg_address" />

        <EditText
            android:layout_weight="1"
            android:id="@+id/et_filter_offset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:textColor="#ff006600"
            android:textSize="14sp"/>

        <TextView
            android:layout_weight="1.2"
            android:id="@+id/tv_filter_len"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/msg_lengh" />

        <EditText
            android:layout_weight="1"
            android:id="@+id/et_filter_len"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:textColor="#ff006600"
            android:textSize="14sp"/>

    </LinearLayout>


        <LinearLayout
            android:id="@+id/rl_filter2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="@dimen/font_middle_14">

        <TextView
            android:id="@+id/tv_filter_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_data" />

        <EditText
            android:id="@+id/et_filter_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"/>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_filter3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textSize="@dimen/font_middle_14">

        <TextView
            android:id="@+id/tv_filter_bank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/filter_bank" />

        <Spinner
            android:id="@+id/sp_filter_bank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:textSize="@dimen/font_small_12"
            android:entries="@array/filter_bank" />

        <RadioGroup
            android:id="@+id/rg_filter_match"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1.2"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_filter_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/filter_match"
                android:layout_weight="1"
                android:textSize="12sp"/>
            <RadioButton
                android:id="@+id/rb_filter_mismatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_mismatch"
                android:layout_weight="1"
                android:textSize="12sp"/>

        </RadioGroup>

        <Button
            android:layout_weight="0.9"
            android:id="@+id/btn_filter_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/msg_confirm"
            android:textSize="12sp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/special_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_choose_power"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/choose_power"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/pow_select"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:entries="@array/pow_select"
                />

            <TextView
                android:id="@+id/tv_choose_factory"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/choose_factory"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/factory_select"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:entries="@array/factory_select"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_select_epc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/epc"
                android:layout_marginRight="5dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/ecp_select"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/edittextstyle"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pow_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="6dp"
                android:gravity="center"
                android:text="@string/select_text_temperature"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/pow_value"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:gravity="center"
                android:paddingRight="5dp"
                android:textColor="#ff006600"
                android:background="@drawable/edittextstyle"
                android:enabled="false" />

            <TextView
                android:id="@+id/pow_unit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/select_unit_tem"
                android:textColor="@color/black"
                android:textSize="14sp"/>
            <Button
                android:id="@+id/pow_func"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="@string/tem_get_tem"
                android:layout_marginLeft="30dp"
                android:textSize="@dimen/font_middle_14"/>
        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rl_filter2">

        <Button
            android:id="@+id/btn_seek_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_continue_seek"
            android:textSize="15sp" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_tagnums_v"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tag_num"
            android:textSize="15sp"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/tv_tagnums"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_totalnums_v"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tag_total"
            android:textSize="15sp"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/tv_totalnums"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_time_v"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="15sp"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>

        <TextView
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="ms"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_speed_name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_speed"
            android:layout_weight="0.8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_speed_unit"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/speed_unit"
            android:textSize="15sp"/>

    </LinearLayout>

    <View
        android:id="@+id/v_end"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="1dp"
        android:background="#ff8f8f8f"/>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/v_end"
        android:fillViewport="true" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_sequence"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_sequence" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="#6000" />

                <TextView
                    android:id="@+id/tv_epc_id"
                    android:layout_width="@dimen/epc_width"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/msg_epc_id" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="#6000" />

                <TextView
                    android:id="@+id/tv_nums"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/msg_nums" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="#6000" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/msg_rssi" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="#6000" />

                <TextView
                    android:id="@+id/tv_add_data"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_data" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#66000000" />

            <ListView
                android:id="@+id/ls_seek"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#66000000" />

        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>
